PHOENIX-6180 Investigate flaky tests in Phoenix Connectors
make HivePhoenixStoreIT abstract
start only one HBase minicluster for Hive tests
do not run hive tests in parallel
set separate DFS work dir for Hive miniclsuter
restore github workflows test