@@ -40,10 +40,7 @@
 
   <properties>
     <test.tmp.dir>${project.build.directory}/tmp</test.tmp.dir>
-    <netty.version>4.1.47.Final</netty.version>
-    <avatica.version>1.8.0</avatica.version>
     <tez.version>0.9.1</tez.version>
-    <jetty.version>8.1.7.v20120910</jetty.version>
     <jdk.version>1.8</jdk.version>
     <commons-lang3.version>3.9</commons-lang3.version>
   </properties>
@@ -247,15 +244,21 @@
               <ignoredUnusedDeclaredDependency>
                 org.apache.tez:tez-dag
               </ignoredUnusedDeclaredDependency>
-              <!-- These are added for phoenix5 only -->
               <ignoredUnusedDeclaredDependency>
                 org.apache.logging.log4j:log4j-core
               </ignoredUnusedDeclaredDependency>
               <ignoredUnusedDeclaredDependency>
                 org.apache.hadoop:hadoop-minicluster
               </ignoredUnusedDeclaredDependency>
+              <ignoredUnusedDeclaredDependency>
+                org.apache.hadoop:hadoop-hdfs
+              </ignoredUnusedDeclaredDependency>
             </ignoredUnusedDeclaredDependencies>
             <ignoredUsedUndeclaredDependencies>
+              <!-- I couldn't find it referenced anywhere in the phoenix-hive codebase -->
+              <ignoredUnusedDeclaredDependency>
+                com.google.code.findbugs:jsr305
+              </ignoredUnusedDeclaredDependency>
               <!-- This one is real, but I don't want to force users to specify both
                 HBase AND Zookeeper versions so we'll just pretend that it's declared properly, 
                 and take whatever version we get -->
@@ -293,6 +296,30 @@
                   <source>${project.parent.basedir}/src/test/java</source>
                 </sources>
               </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <configuration>
+            <!-- The Hbase + Hive minicluster setup seems very fragile, so
+            we make sure to run everything as serially as possible -->
+            <forkCount>1</forkCount>
+            <reuseForks>false</reuseForks>
+          </configuration>
+          <executions>
+            <execution>
+              <id>ParallelStatsDisabledTest</id>
+              <configuration>
+                <forkCount>1</forkCount>
+                <reuseForks>false</reuseForks>
+                <argLine>-Xmx3000m -XX:MaxPermSize=256m -Djava.security.egd=file:/dev/./urandom "-Djava.library.path=${hadoop.library.path}${path.separator}${java.library.path}" -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=./target/</argLine>
+                <groups>org.apache.phoenix.end2end.ParallelStatsDisabledTest</groups>
+              </configuration>
+              <goals>
+                <goal>integration-test</goal>
+                <goal>verify</goal>
+              </goals>
             </execution>
           </executions>
         </plugin>
